# SysInfo

./: CMakeLists.txt  README.md  basedevopen.c  basedevopen.h  devfinder.c  devfinder.h  diskfinder.c  diskfinder.h  diskinfo.c  diskinfo.h  fileinfo.c  gpufinder.c  gpufinder.h  main.c  target_paths.txt
include/: devfileopen.h  devreport .h  devtypes.h  fileinfo.h  primarydevopen.h  secondarydevfopen.h  string_to_dev.h  sysreport.h
src/: basedevopen.c  devfileopen.c  devfinder.c  devreport.c  diskfinder.c  diskinfo.c  fileinfo.c  gpufinder.c  primarydevopen.c  secondarydevfopen.c  string_to_dev.c  sysreport.c
